--- a/web/css/style.css
+++ b/web/css/style.css
@@ -451,7 +451,7 @@ button.action-button:hover {
   border-right: 1px solid #e2e2e2;
   color: #9e9e9e;
   position: relative;
-  top: -2px
+  top: 2px
 }
 .section-title .item.title {
   font-family: 'neosansregular', sans-serif;
@@ -621,7 +621,7 @@ button.action-button:hover {
 }
 .grey-background {
   background-color: #ddd!important;
-  color: #ffffff!important;
+  color: #fff!important;
 }
 .grey-background:hover {
   background-color: #aaa!important;
@@ -1198,7 +1198,7 @@ ol.rounded-list {
   bottom: -2px;
 }
 .icon-state {
-  font-size: 3.5rem;
+  font-size: 3rem;
   vertical-align: middle;
   position: relative;
   bottom: -4px;
@@ -1284,7 +1284,7 @@ ol.rounded-list {
 table, th, td {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
-  font-size: 10pt;
+  font-size: 9pt;
 }
 table {
   border-collapse: collapse;
@@ -1311,7 +1311,7 @@ th.fix {
   z-index: 1040;
 }
 td {
-  text-align: left;
+  text-align: center;
   padding-left: 7px;
   word-break: break-word;
 }
@@ -1323,7 +1323,7 @@ th {
   text-align: center;
   color: #888888;
   padding: 0 10px;
-  font-size: 14pt;
+  font-size: 12pt;
 }
 tr.content {
   border-bottom: 1px solid #eaeaea;
@@ -1556,6 +1556,7 @@ tr.content:hover {
 }
 .login-form > .form-group > .input-group > .input-group-addon {
   background-color: #2b2b2b;
+  color: #9b9b9b;
   border: none;
 }
 .login-form > .form-group > .input-group > input.form-control {
@@ -1563,6 +1564,18 @@ tr.content:hover {
   background-image: none;
   border: none;
   color: white;
+}
+.login-form > .form-group > .input-group > input.form-control::-webkit-input-placeholder {
+  color: #ccc;
+}
+.login-form > .form-group > .input-group > input.form-control::-moz-placeholder {
+  color: #ccc;
+}
+.login-form > .form-group > .input-group > input.form-control:-moz-placeholder {
+  color: #ccc;
+}
+.login-form > .form-group > .input-group > input.form-control:-ms-input-placeholder {
+  color: #ccc;
 }
 .login-logo {
   height: 124px;
@@ -1623,7 +1636,8 @@ a.link-login:hover {
 }
 .login-p {
   display: inline;
-  color: #b7b7b7;
+  color: #ccc;
+  margin-right: 10px;
 }
 .login-p-navbar {
   display: inline;
@@ -1789,7 +1803,7 @@ a.link-login:hover {
   left: 2px;
   top: 1px;
   border-radius: 50% 50%;
-  background-color: #ffffff;
+  background-color: #fff;
   content: " ";
   cursor: pointer;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
