--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1966,34 +1966,37 @@ a.link-login:hover {
   height: 10px;
 }
 
-.signup-error-show{
+.signup-error-show {
   width: 50%;
   margin: 0px auto;
   text-align: left;
 }
-.integration{
+.integration {
   display: block;
   width: 100%;
   height: 100%;
 }
-.integration .provider-logo{
+.integration .provider-logo {
   width: 25%;
   float: left;
   height: 100%;
   display: inline-table;
 }
-.integration .credential-name{
+.integration .credential-name {
   width: 75%;
   float: left;
   height: 100%;
   text-align: left !important;
   display: inline-table;
 }
-.label-inline{
+.label-inline {
   vertical-align: middle;
   display: table-cell;
 }
-.logo-max-size{
+.logo-max-size {
   max-width: 50px;
   max-height: 50px;
+}
+.default-logo-size {
+  font-size: 30px;
 }
