[SPA-53] Application UI redesign
Several new styles were added and some sections were refactored in order
to apply the new UI. Some details are listed below.

[SPA-53] Application UI redesign

FIX: Several styles added
Feature: New Login screen
Feature: Navbar restyling
Feature: Sidebar restyling
Feature: Tables Restyling
Feature: Tabs and pagination restyling
Feature: Dashboard elements restyling

Many more.

[SPA-53] Application UI redesign II

Fix: several style issues fixed on View ticket, Configure monitoring,
Login and Sign Up sections

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2000,3 +2000,10 @@ a.link-login:hover {
 .default-logo-size {
   font-size: 30px;
 }
+.open-modal-graph {
+  background: transparent;
+  border: solid transparent;
+  font-size: 19px;
+  color: grey;
+  outline: none;
+}
