--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2024,3 +2024,36 @@ a.link-login:hover {
   color: grey;
   outline: none;
 }
+.clippy {
+  margin-top: -3px;
+  position: relative;
+  top: 3px;
+}
+.clipboard-button {
+  position: relative;
+  display: inline-block;
+  padding: 4px 12px 6px 12px;
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 20px;
+  color: #333;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #eee;
+  background-image: linear-gradient(#fcfcfc,#eee);
+  border: 1px solid #d5d5d5;
+  border-radius: 3px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-appearance: none;
+}
+.clipboard-div {
+  margin-top: -11px;
+  margin-bottom: 11px;
+}
+.first-step {
+  padding: 15px;
+}
