--- a/web/css/style.css
+++ b/web/css/style.css
@@ -494,7 +494,7 @@ button.action-button:hover {
   background-color: white;
   position: relative;
   margin: auto;
-  padding: 15px 0 70px;
+  padding: 15px 0 300px;
   font-family: 'Open Sans', sans-serif;
   box-shadow: 0px 3px 14px #c3c3c3;
 }
@@ -2099,4 +2099,47 @@ a.link-login:hover {
   margin-top: 74px;
   color: rgba(15, 53, 80, 0.91);
   font-style: italic;
+}
+.inline {
+  display: inline;
+}
+.dropzone {
+  margin-top: 30px;
+  padding: 10px;
+  width: 100%;
+  height: 200px;
+  border-width: 2px;
+  border-color: rgb(102, 102, 102);
+  border-style: dashed;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.dropzone p {
+  font-size: 15px;
+  line-height: 1.42857143;
+  color: #555;
+  font-family: inherit;
+}
+.attachmentFile {
+  height: 30px;
+  width: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
+  background: white;
+  border: solid 1.7px grey;
+  border-radius: 2px;
+  padding-top: 3px;
+}
+.pdfPreview {
+  height: 120px!important;
+  width: 90px;
+}
+.attachmentFile i {
+  font-size: 19px;
+}
+.attachments-link {
+  color: #2d8ccf;
+  cursor: pointer;
+  display: inline;
+  margin-right: 10px;
 }
