--- a/web/css/style.css
+++ b/web/css/style.css
@@ -200,6 +200,12 @@ a:hover, a:active, a:focus {
   color: white;
   padding-top: 5px!important;
 }
+.navbar-company-name {
+  color: white;
+  font-size: 16px;
+  margin-left: 15px;
+  line-height: 49px;
+}
 .pagination>li>a, .pagination>li>span {
   border: none !important;
   background-color: transparent;
@@ -354,6 +360,10 @@ p.menu-text {
   padding-left: .5em;
   padding-right: .5em;
 }
+.custom-loader {
+  margin-top: 40px!important;
+  margin-left: 40px!important;
+}
 button.action-button {
   display: block;
   margin-top: 20px;
@@ -487,21 +497,65 @@ button.action-button:hover {
   box-shadow: 0px 3px 14px #c3c3c3;
 }
 /*Tickets*/
+.button-ticket-header {
+  margin-top: 10px;
+}
 .ticket-container {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  margin-right: auto;
+  margin-left: auto;
   width: 80%;
   height: auto !important;
   height: 100%;
   background-color: white;
   position: relative;
-  margin: auto;
-  padding: 15px 0 300px;
+  padding: 15px 0 0px;
   font-family: 'Open Sans', sans-serif;
-  box-shadow: 0px 3px 14px #c3c3c3;
+  border-radius: 4px;
+  box-shadow: 0px 0px 8px #c3c3c3;
+  padding:30px;
+}
+.ticket-header-container {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+  height: auto !important;
+  height: 100%;
+  background-color: white;
+  position: relative;
+  padding: 15px 0 0px;
+  font-family: 'Open Sans', sans-serif;
+  border-radius: 4px;
+  box-shadow: 0px 0px 8px #c3c3c3;
+}
+.replies-container {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+  height: auto !important;
+  height: 100%;
+  position: relative;
+  padding: 15px 0 0px;
+  font-family: 'Open Sans', sans-serif;
+}
+.ticket-reply {
+  margin-bottom: 10px;
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 0px 0px 8px #c3c3c3;
+}
+.reply-date {
+  margin-right: 10px;
+  color: #8f919d;
 }
 .ticket-header {
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid #cecece;
 }
 .ticket-title {
   font-family: 'Open Sans', sans-serif;
@@ -521,7 +575,7 @@ button.action-button:hover {
 }
 .ticket-footer {
   width: 100%;
-  height: 50px;
+  height: 72px;
   padding: 15px 0;
   border-top: 1px solid #cecece;
   border-bottom: 1px solid #cecece;
@@ -555,7 +609,6 @@ button.action-button:hover {
 .ticket-reply-header {
   height: 50px;
   padding: 15px 0;
-  border-bottom: 1px solid #cecece;
 }
 .ticket-id-name {
   color: #2d8ccf;
@@ -658,6 +711,10 @@ button.action-button:hover {
 }
 #onBoarding1StepContent {
   min-height: 250px!important;
+}
+.dashboard-title {
+  margin: 10px 30px;
+  font-size: 20px;
 }
 .dashboard-icons {
   height: 130px;
@@ -2106,7 +2163,7 @@ a.link-login:hover {
 .dropzone {
   margin-top: 30px;
   padding: 10px;
-  width: 100%;
+  width: calc(100% - 20px);
   height: 200px;
   border-width: 2px;
   border-color: rgb(102, 102, 102);
@@ -2130,7 +2187,7 @@ a.link-login:hover {
   border-radius: 2px;
   padding-top: 3px;
 }
-.pdfPreview {
+.preview {
   height: 120px!important;
   width: 90px;
 }
