--- a/web/css/style.css
+++ b/web/css/style.css
@@ -414,10 +414,13 @@ button.action-button:hover {
   color: #ccc;
   cursor: default;
 }
+.modal-content {
+  max-width: 790px;
+}
 .warn-message {
   font-family: 'neosanslight', sans-serif;
   font-size: 12pt;
-  padding: 50px 70px;
+  padding: 0px 15px;
 }
 .warn-message .action-button {
   margin-left: 10px;
@@ -458,6 +461,13 @@ button.action-button:hover {
 .section-title .item {
   font-family: 'Open Sans', sans-serif;
   padding: 28px 30px;
+  color: #9e9e9e;
+  position: relative;
+  top: 2px
+}
+.section-title .item-tab {
+  font-family: 'Open Sans', sans-serif;
+  padding: 28px 30px;
   border-right: 1px solid #e2e2e2;
   color: #9e9e9e;
   position: relative;
@@ -471,7 +481,19 @@ button.action-button:hover {
   position: relative;
   top: 5px;
 }
-.section-title .item:hover {
+.section-title .item-tab.title {
+  font-family: 'neosansregular', sans-serif;
+  padding: 25px 30px;
+  font-size: 18pt;
+  color: #58595b;
+  position: relative;
+  top: 5px;
+}
+.item-tab-active {
+  background-color: #e2e2e2;
+  cursor: pointer;
+}
+.section-title .item-tab:hover {
   background-color: #e2e2e2;
   cursor: pointer;
 }
@@ -1472,6 +1494,7 @@ tr.content:hover {
     bottom: 0;
     z-index: 3;
     box-shadow: 0px -1px 3px #ccc;
+    z-index: 20;
   }
   .menu-buttons {
     width: 100%;
