--- a/web/css/style.css
+++ b/web/css/style.css
@@ -446,7 +446,7 @@ button.action-button:hover {
   margin-top: 50px;
   overflow-x: hidden;
   overflow-y: auto;
-  position: fixed;
+  /*position: fixed;*/
 }
 .principal-section-loggedout {
   margin-top: 100px;
@@ -2338,4 +2338,8 @@ label {
   text-align: center;
   font-size: 20px;
   font-weight: 400;
+}
+.action-btn-container {
+  width: 25%;
+  float: left;
 }
