--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2339,3 +2339,15 @@ label {
   font-size: 20px;
   font-weight: 400;
 }
+.action-btn-container {
+  width: 25%;
+  float: left;
+}
+.main-section-cloud {
+  height: calc(100% - 90px);
+  width: calc(100% - 100px);
+  margin-left: 100px;
+  margin-top: 50px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
