--- a/web/css/style.css
+++ b/web/css/style.css
@@ -293,6 +293,16 @@ a:hover, a:active, a:focus {
   margin-top: 6px;
   margin-right: 7px;
 }
+.msg {
+  font-family: 'neosansregular';
+}
+.ok {
+  font-family: 'neosansregular';
+  border-radius: 3px;
+}
+.alertify .alert>*, .alertify .dialog>* {
+  border-radius: 5px;
+}
 #sidebar {
   width: 100px!important;
   height: calc(100% - 20px)!important;
@@ -849,12 +859,28 @@ button.action-button:hover {
 }
 /*Widget*/
 .widget {
-  padding: 10px;
   height: 350px;
   font-family: 'neosanslight', sans-serif;
   margin: 10px 0;
   background-color: #fff;
   box-shadow: 0 5px 5px #ccc;
+}
+.widget form {
+  padding: 10px;
+  height: 100%;
+  width: 100%;
+}
+.widget-preloader-div {
+  position: absolute;
+  top: 12px;
+  right: 15px;
+  background: black;
+  opacity: 0.3;
+  width: calc(100% - 30px);
+  height: calc(100% - 20px);
+}
+.widget-preloader {
+  margin: 150px auto!important;
 }
 .create {
   background-color: #eaeaea;
