--- a/web/css/style.css
+++ b/web/css/style.css
@@ -101,6 +101,9 @@ a:hover, a:active, a:focus {
     font-family: 'neosanslight' !important;
 }
 /*App styles*/
+.inline-flex {
+  display: inline-flex!important;
+}
 #nubityApp {
   height: 100%;
 }
@@ -140,6 +143,7 @@ a:hover, a:active, a:focus {
   border: none;
   color: #fff;
   background-color: #d4d4d4;
+  margin: 10px;
 }
 .modal-close:hover {
   background-color: #adadad;
@@ -311,6 +315,7 @@ a:hover, a:active, a:focus {
   position:fixed;
   top: 0;
   box-shadow: 1px 0px 3px #ccc;
+  z-index: 500;
 }
 .menu-buttons {
   margin-top: 20px;
@@ -466,38 +471,81 @@ button.action-button:hover {
   height: 75px;
   background-color: white;
   margin-bottom: 30px;
-  padding-top: 16px;
+}
+.section-title .item-short {
+  font-family: 'Open Sans', sans-serif;
+  color: #9e9e9e;
+
+  height: 75px!important;
+  width: 16%!important;
+  line-height: 75px;
+  display: inline-flex;
+  text-align: center;
+  overflow: hidden;
 }
 .section-title .item {
   font-family: 'Open Sans', sans-serif;
-  padding: 28px 30px;
   color: #9e9e9e;
-  position: relative;
-  top: 2px
-}
-.section-title .item-tab {
-  font-family: 'Open Sans', sans-serif;
-  padding: 28px 30px;
-  border-right: 1px solid #e2e2e2;
-  color: #9e9e9e;
-  position: relative;
-  top: 2px
+
+  height: 75px!important;
+  width: 100%!important;
+  line-height: 75px;
+  display: inline-flex;
+  text-align: center;
+  overflow: hidden;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .section-title .item.title {
   font-family: 'neosansregular', sans-serif;
-  padding: 25px 30px;
   font-size: 18pt;
   color: #58595b;
   position: relative;
-  top: 5px;
+  height: 75px!important;
+  width: 100%!important;
+  line-height: 75px;
+  display: inline-flex;
+  text-align: center;
+  overflow: hidden;
+}
+.section-title .item-tab {
+  font-family: 'Open Sans', sans-serif;
+  border-right: 1px solid #e2e2e2;
+  color: #9e9e9e;
+  position: relative;
+  height: 75px!important;
+  width: 16%!important;
+  line-height: 75px;
+  display: inline-flex;
+  text-align: center;
+  overflow: hidden;
+}
+.section-title .item-short.title {
+  font-family: 'neosansregular', sans-serif;
+  font-size: 18pt;
+  color: #58595b;
+  position: relative;
+  height: 75px!important;
+  width: 16%!important;
+  line-height: 75px;
+  display: inline-flex;
+  text-align: center;
+  overflow: hidden;
 }
 .section-title .item-tab.title {
   font-family: 'neosansregular', sans-serif;
-  padding: 25px 30px;
   font-size: 18pt;
   color: #58595b;
   position: relative;
-  top: 5px;
+  height: 75px!important;
+  width: 16%!important;
+  line-height: 75px;
+  display: inline-flex;
+  text-align: center;
+  overflow: hidden;
+}
+.auto-margin {
+  margin: auto;
 }
 .item-tab-active {
   background-color: #e2e2e2;
@@ -835,10 +883,11 @@ button.action-button:hover {
 .green-button {
   background-color: #50c00a;
   border: solid 0px transparent;
-  border-radius: 2px;
   color: white;
-  font-family: 'Open Sans', sans-serif;
-  padding: 3px 25px;
+  font-size: 10.5pt;
+  font-family: 'neosanslight', sans-serif;
+  padding: 4px 25px;
+  border-radius: .30em;
 }
 .blue-button {
   background-color: #2d8ccf;
@@ -1230,12 +1279,21 @@ ol.rounded-list {
   font-family: 'neosansregular', sans-serif;
   margin: 8px 20px 0;
 }
+.my-account-icons {
+  padding-bottom: 4px!important;
+}
 .my-account-title {
   font-size: 20px;
   margin-bottom: 0px;
 }
 .my-account-email {
   font-family: 'neosanslight', sans-serif;
+}
+.company-labels {
+  font-size: 15px;
+  font-family: 'neosansregular', sans-serif;
+  color: black;
+  font-weight: bold;
 }
 .padding-left{
   padding-left: 15px!important;
@@ -1522,7 +1580,7 @@ tr.content:hover {
     bottom: 0;
     z-index: 3;
     box-shadow: 0px -1px 3px #ccc;
-    z-index: 20;
+    z-index: 500;
   }
   .menu-buttons {
     width: 100%;
@@ -1625,6 +1683,7 @@ tr.content:hover {
   }
   #sidebar {
     height: 68px !important;
+    z-index: 500;
   }
   .menu-buttons {
     margin-top: 10px;
@@ -2288,7 +2347,7 @@ a.link-login:hover {
   background: rgba(144, 120, 120, 0.25);
 }
 #viewContainer {
-  overflow:hidden;
+  overflow: hidden;
   margin: 0px 8px;
 }
 .list-providers {
