--- a/web/css/style.css
+++ b/web/css/style.css
@@ -135,6 +135,7 @@ a:hover, a:active, a:focus {
   width: 100%!important;
   height: 100%!important;
   overflow: auto;
+  padding: 0px!important;
 }
 .modal-close {
   width: 14px;
@@ -150,8 +151,8 @@ a:hover, a:active, a:focus {
 }
 .modal-close span {
   position: relative;
-  left: -3px;
-  top: -4px;
+  left: -3.2px;
+  top: -5.6px;
 }
 .menu-tab-content {
   height: calc(100% - 50px);
@@ -586,7 +587,7 @@ button.action-button:hover {
 .section-content {
   margin-left: 15px;
   margin-right: 15px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   padding: 20px 15px;
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
@@ -743,7 +744,6 @@ button.action-button:hover {
 }
 .public-cloud-form {
   padding-left: 30px!important;
-  padding-top: 10px;
 }
 .public-cloud-button {
   border-radius: 0!important;
@@ -1307,6 +1307,13 @@ ol.rounded-list {
 }
 .my-account-email {
   font-family: 'neosanslight', sans-serif;
+  margin: 0px!important;
+}
+.my-account-form-group {
+  margin-bottom: 5px!important;
+}
+.my-account-alert-title {
+  margin-top: -8px;
 }
 .company-labels {
   font-size: 15px;
