fix on on premise style and private cloud behaveior

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2236,7 +2236,7 @@ a.link-login:hover {
   width: 25%;
   float: left;
   height: 100%;
-  display: inline-table;
+  display: inline;
 }
 .integration .credential-name {
   width: 75%;
