--- a/web/css/style.css
+++ b/web/css/style.css
@@ -135,6 +135,7 @@ a:hover, a:active, a:focus {
   width: 100%!important;
   height: 100%!important;
   overflow: auto;
+  padding: 0px!important;
 }
 .my-account-modal {
   padding: 0px!important;
