--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1776,6 +1776,7 @@ tr.content:hover {
   margin-right: auto;
   clear: both;
   max-width: 450px;
+  text-align: center;
 }
 .login-form > .form-group > .input-group > .input-group-addon {
   background-color: #2b2b2b;
@@ -1842,6 +1843,7 @@ tr.content:hover {
   font-size: 15px;
   font-family: 'neosansregular';
   margin-top: 15px;
+  text-align: center;
 }
 .link-login {
   line-height: 40px;
