--- a/web/css/style.css
+++ b/web/css/style.css
@@ -114,6 +114,10 @@ a:hover, a:active, a:focus {
   text-align: left;
   padding: 15px;
 }
+.left-aligned {
+  text-align: left;
+  padding-left: 5px;
+}
 .modal-dialog {
   margin: auto;
   margin-top: 20px;
