--- a/web/css/style.css
+++ b/web/css/style.css
@@ -437,6 +437,9 @@ button.action-button:hover {
   box-shadow: 0 2px 6px rgba(0,0,0,0.14), 0 1px 12px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.2);
   filter: brightness(110%);
 }
+.no-margin {
+  margin: 0px!important;
+}
 .action-button-start {
   color: white;
   background-color: red;
@@ -1014,6 +1017,9 @@ button.action-button:hover {
   padding: 10px;
   height: 100%;
   width: 100%;
+}
+.widget .fa-times-circle {
+  cursor: pointer;
 }
 .widget-preloader-div {
   position: absolute;
@@ -1630,6 +1636,9 @@ tr.content:hover {
 }
 .alert-table td, .alert-table tr {
   height: 38px!important;
+}
+.triggers-table td, .triggers-table tr {
+  line-height: 20px;
 }
 /*Placeholders*/
 .empty-table {
@@ -2560,7 +2569,7 @@ a.link-login:hover {
   margin-right: 10px !important;
 }
 .m-t-15 {
-  margin-top: 15px !important;
+  margin-top: 4px !important;
 }
 .add-cloud-btn-disabled {
   background-color: #CECECE;
