--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2758,3 +2758,15 @@ label {
   border-radius: 0px 4px 4px 0px !important;
   border-color: #cccccc !important;
 }
+.add-avatar {
+  display: block;
+  max-height: 100%;
+  max-width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
