--- a/web/css/style.css
+++ b/web/css/style.css
@@ -207,7 +207,7 @@ button.close {
   height: 50px;
   padding-top: 12px;
   padding-bottom: 12px;
-  margin-left: 20px;
+  margin-left: 5px;
 }
 .navbar .nav > li {
   border: solid 1px transparent!important;
@@ -285,16 +285,16 @@ button.close {
   text-align: center;
 }
 .alert-badge {
-  width: 18px;
-  height: 18px;
+  width: 16px;
+  height: 16px;
   background-color: #db0720;
   position: absolute;
   border-radius: 50%;
-  font-size: 8pt;
+  font-size: 7pt;
   color: white;
-  line-height: 1.8;
-  left: 57px;
-  top: -6px;
+  line-height: 2;
+  left: 40px;
+  top: -2px;
   font-family: 'neosanslight', sans-serif;
 }
 .up-li {
@@ -330,7 +330,7 @@ button.close {
   border-radius: 5px;
 }
 #sidebar {
-  width: 100px!important;
+  width: 70px!important;
   height: calc(100% - 20px)!important;
   padding-top:30px;
   background-color: #eee;
@@ -342,21 +342,20 @@ button.close {
 .menu-buttons {
   margin-top: 20px;
   height: 70%;
-  width: 100px;
+  width: 70px;
 }
 .disabled {
   cursor: not-allowed!important;
 }
 .menu-button {
-  width: 100px;
-  height: 75px;
+  width: 70px;
+  height: 50px;
   text-align: center;
   position: relative;
   padding-top: 5px;
 }
 a.nb-active, a.nb-active p.menu-text {
   color: #fff !important;
-  position: relative !important;
 }
 a.nb-active > .menu-button {
   background-color: grey;
@@ -367,10 +366,12 @@ a.nb-active > .menu-button {
   color: grey;
   font-family: 'neosanslight', sans-serif;
   line-height: 1;
-  font-size: 12px;
+  font-size: 11px;
 }
 p.menu-text {
   margin: 0 0 5px;
+  position: relative;
+  bottom: 11px;
 }
 .menu-icon {
   color: #9e9e9e;
@@ -527,7 +528,7 @@ button.action-button:hover {
   padding: 0px;
 }
 .social-links {
-  width: 100px;
+  width: 70px;
   text-align: center;
   position: absolute;
   bottom: 0%;
@@ -539,8 +540,8 @@ button.action-button:hover {
 }
 .principal-section {
   height: calc(100% - 71px);
-  width: calc(100% - 100px);
-  margin-left: 100px;
+  width: calc(100% - 70px);
+  margin-left: 70px;
   margin-top: 50px;
   overflow-x: hidden;
   overflow-y: auto;
@@ -568,17 +569,16 @@ button.action-button:hover {
   margin-left: 100px;
 }
 .section-title {
-  height: 60px;
+  height: 50px;
   background-color: white;
   margin-bottom: 10px;
 }
 .section-title .item-short {
   font-family: 'Open Sans', sans-serif;
   color: #9e9e9e;
-
   height: 60px!important;
   width: 16%!important;
-  line-height: 60px;
+  line-height: 50px;
   display: inline-flex;
   text-align: center;
   overflow: hidden;
@@ -589,7 +589,7 @@ button.action-button:hover {
 
   height: 60px!important;
   width: 100%!important;
-  line-height: 60px;
+  line-height: 50px;
   display: inline-flex;
   text-align: center;
   overflow: hidden;
@@ -601,9 +601,9 @@ button.action-button:hover {
   font-size: 16pt;
   color: #58595b;
   position: relative;
-  height: 60px!important;
+  height: 50px!important;
   width: auto!important;
-  line-height: 60px;
+  line-height: 50px;
   display: inline-flex;
   text-align: center;
   overflow: hidden;
@@ -613,9 +613,9 @@ button.action-button:hover {
   border-right: 1px solid #eee;
   color: #9e9e9e;
   position: relative;
-  height: 60px!important;
+  height: 50px!important;
   width: 16%!important;
-  line-height: 60px;
+  line-height: 50px;
   display: inline-flex;
   text-align: center;
   overflow: hidden;
@@ -624,9 +624,9 @@ button.action-button:hover {
   font-family: 'Open Sans', sans-serif;
   color: #9e9e9e;
   position: relative;
-  height: 60px!important;
+  height: 50px!important;
   width: 16%!important;
-  line-height: 63px;
+  line-height: 53px;
   display: inline-flex;
   text-align: center;
   overflow: hidden;
@@ -637,9 +637,9 @@ button.action-button:hover {
   font-size: 16pt;
   color: #58595b;
   position: relative;
-  height: 60px!important;
+  height: 50px!important;
   width: 16%!important;
-  line-height: 60px;
+  line-height: 50px;
   display: inline-flex;
   text-align: center;
   overflow: hidden;
@@ -649,9 +649,9 @@ button.action-button:hover {
   font-size: 16pt;
   color: #58595b;
   position: relative;
-  height: 60px!important;
+  height: 50px!important;
   width: 16%!important;
-  line-height: 60px;
+  line-height: 50px;
   display: inline-flex;
   text-align: center;
   overflow: hidden;
@@ -924,16 +924,22 @@ button.action-button:hover {
 }
 .dashboard-title {
   margin: 10px 30px;
-  font-size: 20px;
+  font-size: 16px;
+  background: #717171;
+  padding: 7px 17px;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  border-radius: 9px 9px 0 0;
 }
 .dashboard-icons {
-  height: 80px;
+  overflow: hidden;
+  height: 50px;
   width: auto;
   max-width: 400px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 25px;
-  font-family: 'neosansregular', sans-serif;
+  margin-bottom: 15px;
+  font-family: 'neosanslight', sans-serif;
   color: white;
   text-align: center;
   background-color: #fff;
@@ -943,6 +949,9 @@ button.action-button:hover {
 }
 .new-dashboard-button {
   float: right;
+  margin-right: 30px;
+  cursor: pointer;
+  line-height: 50px;
 }
 .new-dashboard-plus {
   vertical-align: middle;
@@ -976,15 +985,15 @@ button.action-button:hover {
   position: relative;
 }
 .dashboard-icons .left {
-  bottom: 10px;
+  bottom: 25px;
   right: 15%;
-  color: rgba(255,255,255,0.5);
+  color: white;
   font-size: 70pt;
 }
 .dashboard-icons .right {
-  bottom: 61%;
-  right: 55px;
-  text-align: left;
+  bottom: 124%;
+  right: 42px;
+  text-align: center;
   font-size: 20px;
 }
 .dashboard-icons.first {
@@ -997,7 +1006,7 @@ button.action-button:hover {
   background-color: #db0720;
 }
 .dashboard-icons-counter {
-  font-size: 30pt;
+  font-size: 35px;
 }
 .invisible {
   color:transparent;
@@ -1062,7 +1071,7 @@ button.action-button:hover {
 }
 /*Widget*/
 .widget {
-  height: 350px;
+  height: 310px;
   font-family: 'neosanslight', sans-serif;
   margin: 10px 0;
   background-color: #fff;
@@ -1578,6 +1587,14 @@ ol.rounded-list {
   position: relative;
   bottom: -23px;
 }
+.icon-sidebar {
+  font-size: 3.5rem !important;
+  line-height: 1;
+  vertical-align: middle;
+  text-align: center;
+  position: relative;
+  bottom: 3px;
+}
 /*Text color Helpers*/
 .white-text {
   color: white !important;
@@ -1590,6 +1607,9 @@ ol.rounded-list {
 }
 .dark-grey-text {
   color: #636363 !important;
+}
+.light-grey-text {
+  color: #d4d4d4;
 }
 .red-text {
   color: #db0720 !important;
@@ -1615,6 +1635,9 @@ ol.rounded-list {
 }
 .nubity-dark-grey {
   background-color: #636363 !important;
+}
+.nubity-light-grey {
+  background-color: #d4d4d4 !important;
 }
 .nubity-red {
   background-color: #db0720 !important;
@@ -1708,6 +1731,7 @@ tr.content:hover {
   font-size: 13pt;
   margin-bottom: 2px;
   margin-top: 30px;
+  position: relative !important;
 }
 .highcharts-legend-item {
   font-family: 'Open Sans', sans-serif;
@@ -1717,7 +1741,7 @@ tr.content:hover {
   display: none;
 }
 .highcharts-root {
-  height: 300px;
+  height: 280px;
   width: 100%;
 }
 .hichart-main-container {
@@ -1725,10 +1749,13 @@ tr.content:hover {
 }
 .highcharts-container {
   width: 100%!important;
-  height: 300px!important;
+  height: 280px!important;
 }
-#container2, #container1 {
-  height: 300px;
+#container10, #container9, #container8, #container7, #container6, #container5, #container4, #container3, #container2, #container1, #container0 {
+  height: 280px;
+}
+svg.highcharts-root {
+  margin-top: -27px;
 }
 /*Media Queries*/
 @media screen and (max-width: 1440px) {
@@ -2348,6 +2375,8 @@ a.link-login:hover {
 .allHeight {
   height: 300px;
   width: 100%;
+  top: -14px;
+  position: relative;
 }
 .confirm-account-padding {
   padding-top: 25px;
